# clean-py

./: .gitignore  Dockerfile  Dockerfile.example  Makefile  PROJECT_QUICK_REF.md  README.md  clean-py.code-workspace  docker-compose.logging-demo.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
cloudformation/: README.md  build-and-deploy.sh  cleanup.sh  ecr.yaml  ecs-fargate.yaml  simple-vpc.yaml  vpc-alb.yaml
docs/: coding-standards.md  make-installation-guide.md  vscode-problems-panel-management.md  vscode-test-discovery.md  windows-powershell-commands.md
docs/logging/: README.md  best-practices.md  examples.md  troubleshooting.md
docs/patterns/: advanced-patterns.md  clean-architecture-patterns.md  clean-architecture.md  domain-driven-design.md  factory-pattern-testing-strategy.md  implementation-roadmap.md  lambda-compatible-routing.md  python-development-setup.md  python-security-patterns.md  shared-kernel-guide.md
docs/security/: README.md  aws-security-patterns.md  jwt-aws-security.md
examples/: logging_environment_demo.py
scripts/: setup-cloud9.sh
src/: streamlit_api_client.py  streamlit_app.py
src/application/use_cases/commands/: create_customer.py  create_order.py
src/application/use_cases/queries/: get_customer_orders.py  search_customers.py
src/domain/entities/: customer.py  order.py
src/domain/repositories/: customer_repository.py  order_repository.py
src/infrastructure/database/: __init__.py  models.py
src/infrastructure/database/models/: __init__.py  customer_model.py  order_model.py
src/infrastructure/database/repositories/: customer_repository_impl.py  order_repository_impl.py
src/infrastructure/logging/: __init__.py  config.py  correlation.py  decorators.py  formatters.py  handlers.py  lambda_utils.py  logger.py  middleware.py
src/presentation/: main.py  repositories.py  startup.py
src/presentation/api/: health.py
src/presentation/api/v1/: customers.py  orders.py
src/presentation/schemas/: customer_schemas.py  order_schemas.py
src/shared_kernel/: __init__.py
src/shared_kernel/base/: __init__.py  aggregate_root.py  domain_event.py  entity.py  specification.py  value_object.py
src/shared_kernel/exceptions/: __init__.py  domain_exceptions.py
src/shared_kernel/types/: __init__.py  identifiers.py
src/shared_kernel/value_objects/: __init__.py  address.py  email.py  money.py  phone_number.py
tests/infrastructure/logging/: __init__.py  test_config.py  test_correlation.py  test_formatters.py  test_logger.py
tests/unit/application/commands/: test_create_customer.py  test_create_order.py
tests/unit/application/queries/: test_get_customer_orders.py  test_search_customers.py
tests/unit/domain/: test_customer.py  test_order.py
tests/unit/shared_kernel/: __init__.py  test_value_objects.py
